changed this to linked list